k8s/base/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-netpol
  namespace: phishing-url-scanner
spec:
  podSelector:
    matchLabels:
      app: scanner-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: ingress-nginx
  egress:
    - to:
      - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: postgres
        podSelector:
          matchLabels:
            app: postgres
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
